--- a/index.html
+++ b/index.html
@@ -26,17 +26,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <!-- Good default declaration:
-    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-    -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
     <style>
         #footer {
             width:100%;
@@ -56,7 +46,9 @@
     </header>
         
     <div id="content" class="content">
-        <div id="space" style="width:100%; height:80%;"><img src="img/space.png" style="width:20%;"></div>
+        <img src="img/Bus_logo.png" style="height:50%; width:50%">
+        <h3><a href="https://www.thsrc.com.tw/tw/TimeTable/SearchResult">高鐵時刻表及票價查詢</a></h3>
+        <h3><a href="http://twtraffic.tra.gov.tw/twrail/mobile/home.aspx">台鐵時刻表及票價查詢</a></h3>
     </div>
         
     <div id="footer">
